force-app/main/default/objects/Payment_Link__c/Payment_Link__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to store details about the Adyen payment by link solution</description>
    <label>Payment Link</label>
    <nameField>
        <label>Payment Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>