force-app/main/default/objects/Payment_Link__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>