force-app/main/default/objects/Payment_Link__c/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Payment Links</relationshipLabel>
    <relationshipName>Payment_Links</relationshipName>
    <type>Lookup</type>
</CustomField>