force-app/main/default/objects/Payment_Link__c/fields/Payment_Method_Used__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Used__c</fullName>
    <label>Payment Method Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>