force-app/main/default/objects/Payment_Link__c/fields/Shopper_Email__c.field-meta.xml
<CustomField>
    <fullName>Shopper_Email__c</fullName>
    <label>Shopper Email</label>
    <type>Email</type>
</CustomField>