force-app/main/default/objects/Payment_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expire_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Shopper_Email__c</columns>
    <columns>URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>